<resources>
    <string name="app_name">Practica3</string>
    <string name="titulo">Disfruta Apartadó</string>
    <string name="publicidad">Guía turistica de la calurosa y pujante capital bananera del Urabá antioqueño, aquí encontraras toda la información relacionada con hoteles, sitios turisticos, bares y mucho mas.</string>
    <string name="acercaD">Acerca de...</string>
    <string name="acercaDcontent">Aplicación desarrollada por el estudiante de ingeniería electrónica José Antonio Blandón Torres. 04/04/2016</string>
    <string name="sitios_turisticos">Sitios turisticos</string>
    <string name="oasis">Parque recreativo el Oasis</string>
    <string name="oasisInfo">Parque recreativo que tiene para el servicio de sus visitantes piscina para adultos y niños, kiosco para eventos, cancha de fútbol, cafetería, fuente ornamental, zonas verdes y parqueadero.</string>
    <string name="encuentros">Parque de los encuentros</string>
    <string name="encuentrosInfo">A 3 Km. de Apartadó en la vía que conduce a Carepa, se encuentra en funcionamiento la primera etapa del Parque de los Encuentros de COMFENALCO Antioquia. Esta cuenta con Parador, restaurante, piscina para adultos y niños, zona de juegos y parqueaderos. </string>
    <string name="zungo">Parque Zungo</string>
    <string name="zungoInfo">Un bello lugar ambiental para la educación y el deporte ubicado en la vereda Zungo Carretera, cuenta con botes de remo, piscina para niños y adultos, tobogán, canchas de fútbol, placa polideportiva, pista de bicicros, pista de triciclos, juegos infantiles, brincos (castillo de lona), kioscos para eventos empresariales, kioscos familiares, cafetería, restaurantes, juegos de mesa, zonas verdes y amplios parqueaderos.</string>
    <string name="bares">Bares</string>
    <string name="kiwi">KIWI restaurante bar</string>
    <string name="kiwiInfo">En nuestro Restaurante Bar contamos con: Platos a la Carta, Carnes, Pastas, Comidas de Mar y Comidas rápidas. Visítenos en el Barrio Ortiz (Carrera 103 # 99a-03)para tener el gusto de atenderlo.</string>
    <string name="pampa">Restobar La Pampa</string>
    <string name="pampaInfo">En nuestras especialidades están la parrillada al estilo campo argentino. Los cortes que manejamos son: Cordero, Chivito, Costilla de res, de cerdo, Perniles y Pollo. El proceso en la cual asamos nuestras carnes es a fuego lento con estacas, donde utilizamos leños de diferentes matices. Nuestros clientes también podrán disfrutar de Vinos Argentinos, Chilenos, Franceses y Jugos naturales. Atendemos eventos sociales y empresariales, realice su reserva al número 3117658163. </string>
    <string name="barbacoa">Barbacoa Restaurante bar</string>
    <string name="barbacoaInfo">Restaurante especializado en asados, ubicado en el barrio ortíz(Carrera 106c #99E-118). Realice su reserva al número 8282153</string>
    <string name="hoteles">Hoteles</string>
    <string name="estaciones">Hotel las 4 estaciones</string>
    <string name="estacionesInfo">El Hotel Las 4 Estaciones ofrece la mejor alternativa de alojamiento en la región de urabá, el diseño elegante de sus instalaciones combina elementos minimalistas que hacen referencia a las cuatro estaciones meteorológicas del año, cada habitación está lujosamente dotada para hacer que durante su estadía se sienta mejor que en casa.Contamos con 12 habitaciones estándar, 6 suites junior, 2 suites presidenciales dotadas de Aire acondicionado, Minibar, Room service, Sala de Negocios, Internet, Wi-Fi, TV por cable, Lavandería y planchado, Parqueadero vigilado las 24 Hora, Noches románticas. El hotel se encuentra ubicado en la calle 98 #100-20. Realice sus reservas a través del número 8289911 o mediante el correo hotellas4estaciones@hotmail.com</string>
    <string name="digmaran">Hotel Digmaran</string>
    <string name="digmaranInfo">El hotel cuenta con 20 amplias habitaciones, con mueblería de calidad y confort, camas sencillas y dobles, con capacidad para 40 personas en las diferentes formas de acomodación. Realice su reserva a través del número 8283300 o por medio del correo hoteldigmaran@hotmail.com</string>
    <string name="wSanchez">Hotel William Sanchez</string>
    <string name="wSanchezInfo">Mientras usted descansa, nosotros ponemos a su disposición todo el empeño, para que su estadía sea lo más placentera posible.Contamos con 30 Habitaciones dotadas de: TV, cable, Teléfono, Nevera, Aire Acondicionado, Ventilador y WIFI. Realice sus reserva a través del número 8280219 o mediante el correo hotelwilliamsanchez@hotmail.com</string>
    <string name="demo">Información Demográfica</string>
    <string name="demoInfo">Apartadó es un municipio de Colombia, localizado en la subregión de Urabá en el departamento de Antioquia, siendo el municipio más poblado de dicha región. En su área urbana, Apartadó se divide en 49 barrios, repartidos en 4 comunas.3 Mientras que en su parte rural, cuenta con 4 corregimientos4 y 57 veredas5 .Apartadó cuenta con 183.716 habitantes, de los cuales 159.174 corresponde a la zona urbana y el otro tanto a la zona rural, además confluye una diversa mezcla cultural que reúne afrodescendientes, paisas, costeños e indígenas, en una planicie que forma parte del Caribe colombiano.</string>

</resources>
