<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/sitios_turisticos"
            style="@style/TextViewU" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/oasis"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/oasis"/>
            <TextView
                style="@style/TextViewT"
                android:text="@string/oasisInfo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/encuentros"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/encuentros"/>

            <TextView
                style="@style/TextViewT"
                android:text="@string/encuentrosInfo"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/zungo"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/parquezungo"/>

            <TextView
                style="@style/TextViewT"
                android:text="@string/zungoInfo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


