<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/hoteles"
            style="@style/TextViewU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/estaciones"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/estaciones"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewT"
                android:text="@string/estacionesInfo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/digmaran"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/digmaran"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewT"
                android:text="@string/digmaranInfo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/wSanchez"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:src="@drawable/williansanchez"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewT"
                android:text="@string/wSanchezInfo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>


