<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/bares"
            style="@style/TextViewU" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/kiwi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/kiwi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextViewT"
                    android:text="@string/kiwiInfo"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/pampa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/lapampa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewT"
                android:text="@string/pampaInfo"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewD"
                android:text="@string/barbacoa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="180dp"
                android:layout_gravity="center"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:src="@drawable/barbacoa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextViewT"
                android:text="@string/barbacoaInfo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
